# backend/swagger.openapi.yaml
@@ -369,6 +369,12 @@ paths:
       responses:
         '200':
           description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/AventurierDto'
 
 components:
 
